# project-1

./: .gitattributes  .gitignore
backend/services/auth-service/: Cargo.toml  Dockerfile  db.sql
clients/web/: package-lock.json  package.json
server/: docker-compose.yml
server/services/account-service/: Dockerfile  pyproject.toml
server/services/auth-service/: Cargo.toml  Dockerfile  db.sql
server/services/auth-service/.sqlx/: query-7e10972fa29ff23dc5e42c9e2bf41281429d7c99fb888c7ce993998dbf0847c8.json  query-ea1035ff507a5ae8755c296570c946d969f76afcfc6cbd44235d53d747843d2a.json
server/services/auth-service/migrations/: 20250618215911_migrate.sql
server/services/auth-service/src/: lib.rs  main.rs
server/services/auth-service/src/api/: routes.rs
server/services/auth-service/src/api/handlers/: login.rs  logout.rs  refresh.rs  register.rs
server/services/auth-service/src/api/v1/: routes.rs
server/services/auth-service/src/api/v1/handlers/: login.rs  logout.rs  refresh.rs  register.rs
server/services/auth-service/src/core/: app_state.rs  config.rs
server/services/auth-service/src/db/: token_data.rs  user_data.rs
server/services/auth-service/src/models/: auth.rs  errors.rs  login.rs  mod.rs  token.rs  user.rs
server/services/auth-service/src/services/: auth_service.rs  blacklist_service.rs  mod.rs  register_service.rs  token_service.rs
server/services/comment-service/: Cargo.toml
server/services/post-service/: Cargo.toml  db.sql
server/services/post-service/src/: lib.rs  main.rs
server/services/post-service/src/core/: app_state.rs
(+24 files in other folders)
