[package]
name = "post-service"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
uuid = "1.17.0"
dotenv = "0.15.0"
cdrs-tokio = "8.1.7"
rdkafka = "0.37.0"